{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 19,
  "lineage": "84b4e9d1-b2bc-6ac2-8bf9-90629db7c568",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myvm48",
            "internal_domain_name_suffix": "2lt5fomucxduvavujf1rj2zb5c.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.234",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myVM-ip",
                "subnet_id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "70-A8-A5-2F-BE-6A",
            "name": "myvm48",
            "private_ip_address": "10.0.0.234",
            "private_ip_addresses": [
              "10.0.0.234"
            ],
            "resource_group_name": "myResourceGroup",
            "virtual_machine_id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/MYRESOURCEGROUP/providers/Microsoft.Compute/virtualMachines/myVM"
          },
          "dependencies": [
            "azurerm_public_ip.res-8",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.res-10",
            "azurerm_virtual_network.res-9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myvm48|/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg",
            "network_interface_id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myvm48",
            "network_security_group_id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.res-3",
            "azurerm_network_security_group.res-5",
            "azurerm_public_ip.res-8",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.res-10",
            "azurerm_virtual_network.res-9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg",
            "location": "northeurope",
            "name": "myVM-nsg",
            "resource_group_name": "myResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 320,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "myVM-nsg",
            "priority": 320,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-5",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "myVM-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-5",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myVM-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.115.124.167",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "myVM-ip",
            "resource_group_name": "myResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myResourceGroup",
            "virtual_network_name": "myVM-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_virtual_network.res-9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b9f2e7e2-1594-4ac7-82b4-497714f321fa",
            "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet",
            "location": "northeurope",
            "name": "myVM-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "myResourceGroup",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/895796c5-829c-4965-a2d3-82b3aba46b55/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet/subnets/default",
                "name": "default",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    }
  ]
}